--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,27 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="color-scheme" content="light dark" />
-		<title>Vite + Preact</title>
+
+		<!-- Basic Meta Tags -->
+		<title>Open Kahoot</title>
+		<meta name="description" content="An open source kahoot clone">
+		
+		<!-- Open Graph Meta Tags -->
+		<meta property="og:title" content="Open Kahoot">
+		<meta property="og:description" content="An open source kahoot clone">
+		<meta property="og:type" content="website">
+		<meta property="og:site_name" content="Open Kahoot">
+		
+		<!-- Twitter Card Meta Tags (Optional) -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@yourtwitterhandle">
+		<meta name="twitter:title" content="Open Kahoot">
+		<meta name="twitter:description" content="An open source kahoot clone">
+		
+		<!-- CSS, JavaScript, etc. -->
+
 		<script src="/env.js"></script>
+
 	</head>
 	<body>
 		<div id="app"></div>
